Entrenador_Sistemas de ecuaciones
Se agrega un entrenador de sistema de ecuaciones. Se añade un codigo para verificar las respuestas correctas. Las respuestas negativas aun tienen un problema en esta seccion

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <option value="unidades">  |   Entrena conversión de unidades</option>
                         <option value="algebra">  |   Entrena reducción de términos semejantes </option>
                         <option value="ecuaciones">  |   Entrena ecuaciones de primer grado</option>
+                        <option value="sistemasEcuaciones">  |   Entrena sistema de ecuaciones </option>
                     </select>
                 </nav>
             </div>
