--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                         <!--<option value="unidades">  |   Entrena conversión de unidades</option>
                        <option value="algebra">  |   Entrena reducción de términos semejantes </option>
                         <option value="ecuaciones">  |   Entrena ecuaciones de primer grado</option>
-                        <option value="sistemasEcuaciones">  |   Entrena sistema de ecuaciones </option>-->
-                        <option value="ecuacionesSegundoGrado">  |   Entrena Ecuaciones de Segundo Grado </option>
+                        <option value="sistemasEcuaciones">  |   Entrena sistema de ecuaciones </option>
+                        <option value="ecuacionesSegundoGrado">  |   Entrena Ecuaciones de Segundo Grado </option>-->
+                        <option value="areasYVolumenes">  |   Entrena Áreas y Volúmenes </option>
                     </select>
                 </nav>
             </div>
