--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <h1><img src="imagenes/logo.png" class="logo">El Entrenador de Ciencias</h1>
                 <nav class="cajaTema">
                     <select id="tema" class="tema" onchange="actualizarProblemas(), mostrarProblemaAleatorio(), fraseAleatoria()">
-                        <!--<option value="unidades">  |   Entrena conversión de unidades</option>
+                        <option value="unidades">  |   Entrena conversión de unidades</option>
                        <option value="algebra">  |   Entrena reducción de términos semejantes </option>
                         <option value="ecuaciones">  |   Entrena ecuaciones de primer grado</option>
                         <option value="sistemasEcuaciones">  |   Entrena sistema de ecuaciones </option>
-                        <option value="ecuacionesSegundoGrado">  |   Entrena Ecuaciones de Segundo Grado </option>-->
+                        <option value="ecuacionesSegundoGrado">  |   Entrena Ecuaciones de Segundo Grado </option>
                         <option value="areasYVolumenes">  |   Entrena Áreas y Volúmenes </option>
                     </select>
                 </nav>
